force-app/main/default/objects/NmiDataSets__x/NmiDataSets__x.object-meta.xml
<CustomObject>
    <description>NmiDataSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>NmiDataSets</externalName>
    <label>NmiDataSets</label>
    <pluralLabel>NmiDataSets</pluralLabel>
</CustomObject>