force-app/main/default/objects/NmiDataSets__x/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Building</description>
    <externalDeveloperName>Building</externalDeveloperName>
    <label>Building</label>
    <length>128</length>
    <type>Text</type>
</CustomField>