force-app/main/default/objects/NmiDataSets__x/fields/City1__c.field-meta.xml
<CustomField>
    <fullName>City1__c</fullName>
    <description>City1</description>
    <externalDeveloperName>City1</externalDeveloperName>
    <label>City1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>