force-app/main/default/objects/NmiDataSets__x/fields/CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>CustomerClass__c</fullName>
    <description>CustomerClass</description>
    <externalDeveloperName>CustomerClass</externalDeveloperName>
    <label>CustomerClass</label>
    <length>128</length>
    <type>Text</type>
</CustomField>