force-app/main/default/objects/NmiDataSets__x/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <description>DateFrom</description>
    <externalDeveloperName>DateFrom</externalDeveloperName>
    <label>DateFrom</label>
    <length>128</length>
    <type>Text</type>
</CustomField>