force-app/main/default/objects/NmiDataSets__x/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <description>DateTo</description>
    <externalDeveloperName>DateTo</externalDeveloperName>
    <label>DateTo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>