force-app/main/default/objects/NmiDataSets__x/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>EffectiveDate</description>
    <externalDeveloperName>EffectiveDate</externalDeveloperName>
    <label>EffectiveDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>