force-app/main/default/objects/NmiDataSets__x/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Floor</description>
    <externalDeveloperName>Floor</externalDeveloperName>
    <label>Floor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>