force-app/main/default/objects/NmiDataSets__x/fields/HausNum2__c.field-meta.xml
<CustomField>
    <fullName>HausNum2__c</fullName>
    <description>HausNum2</description>
    <externalDeveloperName>HausNum2</externalDeveloperName>
    <label>HausNum2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>