force-app/main/default/objects/NmiDataSets__x/fields/HouseNum1__c.field-meta.xml
<CustomField>
    <fullName>HouseNum1__c</fullName>
    <description>HouseNum1</description>
    <externalDeveloperName>HouseNum1</externalDeveloperName>
    <label>HouseNum1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>