force-app/main/default/objects/NmiDataSets__x/fields/HouseNum2__c.field-meta.xml
<CustomField>
    <fullName>HouseNum2__c</fullName>
    <description>HouseNum2</description>
    <externalDeveloperName>HouseNum2</externalDeveloperName>
    <label>HouseNum2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>