force-app/main/default/objects/NmiDataSets__x/fields/Lgzusatz__c.field-meta.xml
<CustomField>
    <fullName>Lgzusatz__c</fullName>
    <description>Lgzusatz</description>
    <externalDeveloperName>Lgzusatz</externalDeveloperName>
    <label>Lgzusatz</label>
    <length>128</length>
    <type>Text</type>
</CustomField>