force-app/main/default/objects/NmiDataSets__x/fields/NetworkTariffcode__c.field-meta.xml
<CustomField>
    <fullName>NetworkTariffcode__c</fullName>
    <description>NetworkTariffcode</description>
    <externalDeveloperName>NetworkTariffcode</externalDeveloperName>
    <label>NetworkTariffcode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>