force-app/main/default/objects/NmiDataSets__x/fields/Nmistatuscode__c.field-meta.xml
<CustomField>
    <fullName>Nmistatuscode__c</fullName>
    <description>Nmistatuscode</description>
    <externalDeveloperName>Nmistatuscode</externalDeveloperName>
    <label>Nmistatuscode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>