force-app/main/default/objects/NmiDataSets__x/fields/PoD__c.field-meta.xml
<CustomField>
    <fullName>PoD__c</fullName>
    <description>PoD</description>
    <externalDeveloperName>PoD</externalDeveloperName>
    <label>PoD</label>
    <length>128</length>
    <type>Text</type>
</CustomField>