force-app/main/default/objects/NmiDataSets__x/fields/PostCode1__c.field-meta.xml
<CustomField>
    <fullName>PostCode1__c</fullName>
    <description>PostCode1</description>
    <externalDeveloperName>PostCode1</externalDeveloperName>
    <label>PostCode1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>