force-app/main/default/objects/NmiDataSets__x/fields/RegionalStructure__c.field-meta.xml
<CustomField>
    <fullName>RegionalStructure__c</fullName>
    <description>RegionalStructure</description>
    <externalDeveloperName>RegionalStructure</externalDeveloperName>
    <label>RegionalStructure</label>
    <length>128</length>
    <type>Text</type>
</CustomField>