force-app/main/default/objects/NmiDataSets__x/fields/Roomnumber__c.field-meta.xml
<CustomField>
    <fullName>Roomnumber__c</fullName>
    <description>Roomnumber</description>
    <externalDeveloperName>Roomnumber</externalDeveloperName>
    <label>Roomnumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>