force-app/main/default/objects/NmiDataSets__x/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street</description>
    <externalDeveloperName>Street</externalDeveloperName>
    <label>Street</label>
    <length>128</length>
    <type>Text</type>
</CustomField>