force-app/main/default/objects/NmiDataSets__x/fields/StrErg2__c.field-meta.xml
<CustomField>
    <fullName>StrErg2__c</fullName>
    <description>StrErg2</description>
    <externalDeveloperName>StrErg2</externalDeveloperName>
    <label>StrErg2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>