force-app/main/default/objects/NmiDataSets__x/fields/StrErg4__c.field-meta.xml
<CustomField>
    <fullName>StrErg4__c</fullName>
    <description>StrErg4</description>
    <externalDeveloperName>StrErg4</externalDeveloperName>
    <label>StrErg4</label>
    <length>128</length>
    <type>Text</type>
</CustomField>