force-app/main/default/objects/NmiDataSets__x/fields/StrSuppl1__c.field-meta.xml
<CustomField>
    <fullName>StrSuppl1__c</fullName>
    <description>StrSuppl1</description>
    <externalDeveloperName>StrSuppl1</externalDeveloperName>
    <label>StrSuppl1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>