force-app/main/default/objects/NmiDataSets__x/fields/StrSuppl2__c.field-meta.xml
<CustomField>
    <fullName>StrSuppl2__c</fullName>
    <description>StrSuppl2</description>
    <externalDeveloperName>StrSuppl2</externalDeveloperName>
    <label>StrSuppl2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>