force-app/main/default/objects/NmiDataSets__x/fields/StrSuppl3__c.field-meta.xml
<CustomField>
    <fullName>StrSuppl3__c</fullName>
    <description>StrSuppl3</description>
    <externalDeveloperName>StrSuppl3</externalDeveloperName>
    <label>StrSuppl3</label>
    <length>128</length>
    <type>Text</type>
</CustomField>