force-app/main/default/objects/NmiDataSets__x/fields/SupplyGuarantee__c.field-meta.xml
<CustomField>
    <fullName>SupplyGuarantee__c</fullName>
    <description>SupplyGuarantee</description>
    <externalDeveloperName>SupplyGuarantee</externalDeveloperName>
    <label>SupplyGuarantee</label>
    <length>128</length>
    <type>Text</type>
</CustomField>