force-app/main/default/objects/NmiDataSets__x/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <description>TimeZone</description>
    <externalDeveloperName>TimeZone</externalDeveloperName>
    <label>TimeZone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>