force-app/main/default/objects/NmiDataSets__x/fields/Zzflatno__c.field-meta.xml
<CustomField>
    <fullName>Zzflatno__c</fullName>
    <description>Zzflatno</description>
    <externalDeveloperName>Zzflatno</externalDeveloperName>
    <label>Zzflatno</label>
    <length>128</length>
    <type>Text</type>
</CustomField>