force-app/main/default/objects/NmiDataSets__x/fields/Zzflattype__c.field-meta.xml
<CustomField>
    <fullName>Zzflattype__c</fullName>
    <description>Zzflattype</description>
    <externalDeveloperName>Zzflattype</externalDeveloperName>
    <label>Zzflattype</label>
    <length>128</length>
    <type>Text</type>
</CustomField>