force-app/main/default/objects/NmiDataSets__x/fields/Zzhn2__c.field-meta.xml
<CustomField>
    <fullName>Zzhn2__c</fullName>
    <description>Zzhn2</description>
    <externalDeveloperName>Zzhn2</externalDeveloperName>
    <label>Zzhn2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>