force-app/main/default/objects/NmiDataSets__x/fields/Zzhn2suffix__c.field-meta.xml
<CustomField>
    <fullName>Zzhn2suffix__c</fullName>
    <description>Zzhn2suffix</description>
    <externalDeveloperName>Zzhn2suffix</externalDeveloperName>
    <label>Zzhn2suffix</label>
    <length>128</length>
    <type>Text</type>
</CustomField>