force-app/main/default/objects/NmiDataSets__x/fields/Zzstrsuffix__c.field-meta.xml
<CustomField>
    <fullName>Zzstrsuffix__c</fullName>
    <description>Zzstrsuffix</description>
    <externalDeveloperName>Zzstrsuffix</externalDeveloperName>
    <label>Zzstrsuffix</label>
    <length>128</length>
    <type>Text</type>
</CustomField>